k8s/learn/svc/external-service-extemalname.yaml
apiVersion: v1
kind: Service
metadata:
  name: external-service
spec:
  type: ExternalName
  externalName: someapi.neeson.com
  ports:
    - port: 80
